// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncludeContainer should not render include for a Canonical page with toggles disabled 1`] = `<div />`;

exports[`IncludeContainer should not render include for an Amp page with toggles disabled 1`] = `<div />`;

exports[`IncludeContainer should render include for a Canonical page with toggles enabled 1`] = `
<div>
  canonical-includes-container
</div>
`;

exports[`IncludeContainer should render include for an Amp page with toggles enabled 1`] = `
<div>
  amp-includes-container
</div>
`;
